[package]
name = "automated-marketing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
regex = "1.10"
url = "2.5"
urlencoding = "2.1"
headless_chrome = "1.0"
lettre = "0.11"
anyhow = "1.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"
rayon = "1.8"
